@@ -968,6 +968,9 @@ define('QUEUE_DETAILS', 2);
 // item count to display in the details queue
 define('QUEUE_DETAIL_ITEM_COUNT', 500);
 
+// configuration -> maps default add icon name
+define('MAP_DEFAULT_ICON', 'Server_(96)');
+
 // if magic quotes on, then get rid of them
 if (get_magic_quotes_gpc()) {
 	function zbx_stripslashes($value) {
