@@ -1,6 +1,7 @@
 Changes for 2.1.3
 
 New features:
+..F....... [ZBX-6868] maps default add icon defined in defines.inc.php
 .......PS. [ZBX-6852] removed support of iODBC (Sasha)
 A.F.I..... [ZBXNEXT-1569] implemented user name and surname displaying in acknowledgements (Ivo, Oleg)
 
